fix index page not being centered properly on safari mobile

--- a/_sass/main/_index.scss
+++ b/_sass/main/_index.scss
@@ -31,6 +31,7 @@
 .hero-text-container {
   position: absolute;
   top: 80px;
+  left: 50%;
   width: 100%;
   max-width: 868px;
   height: 382px;
@@ -38,6 +39,7 @@
   border: 4px solid overlay-value(0.75);
   background-color: #fff;
   overflow-x: hidden;
+  transform: translate(-50%, 0);
 
   @include media-query($on-tablet) {
     max-width: 718px;
@@ -64,6 +66,8 @@
   padding: $padding;
   position: absolute;
   bottom: 40px - $padding;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   svg > path {
     fill: none;
